--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,28 +5,28 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Sign in</title>
+        <title>Log in</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     </head>
     <body>
         <div class="container text-center">
-            <h1>SIGN IN</h1>
+            <h1 th:align="center">LOG IN</h1>
 
-            <form method="post" style="max-width: 600px; margin: 0 auto;">
+            <form th:action="@{/login}" th:object="user" method="post" style="max-width: 600px; margin: 0 auto;">
                 <div class="m-3">
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
                         <div class="col-8">
-                            <input type="email" class="form-control" required />
+                            <input type="email" th:field="*{email}" class="form-control" required />
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-4 col-form-label">Password: </label>
                         <div class="col-8">
-                            <input type="password" class="form-control"
+                            <input type="password" th:field="*{password}" class="form-control"
                                    required minlength="1"/>
                         </div>
                     </div>
