--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,38 +4,38 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <title>Sign up</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-</head>
-<body>
-    <div class="container text-center">
-        <h1>SIGN UP</h1>
+    <head>
+        <title>Sign up</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    </head>
 
-        <form method="post" style="max-width: 600px; margin: 0 auto;">
-            <div class="m-3">
-                <div class="form-group row">
-                    <label class="col-4 col-form-label">E-mail: </label>
-                    <div class="col-8">
-                        <input type="email" class="form-control" required />
+    <body>
+        <div class="container text-center">
+            <h1 th:align="center">SIGN UP</h1>
+
+            <form method="post" style="max-width: 600px; margin: 0 auto;">
+                <div class="m-3">
+                    <div class="form-group row">
+                        <label class="col-4 col-form-label">E-mail: </label>
+                        <div class="col-8">
+                            <input type="email" class="form-control" required />
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-4 col-form-label">Password: </label>
+                        <div class="col-8">
+                            <input type="password" class="form-control"
+                                   required minlength="1"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <button>Sign up</button>
                     </div>
                 </div>
-
-                <div class="form-group row">
-                    <label class="col-4 col-form-label">Password: </label>
-                    <div class="col-8">
-                        <input type="password" class="form-control"
-                               required minlength="1"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <button>Sign in</button>
-                    <button>Sign up</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</body>
+            </form>
+        </div>
+    </body>
 </html>
