--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <head>
-        <title>Log in</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    </head>
+      xmlns:th="http://www.thymeleaf.org">
+    <head th:replace="fragments/header :: header"></head>
 
     <body>
         <div class="container text-center">
             <h1 th:align="center">LOG IN</h1>
 
-            <form th:action="@{/login}" th:object="user" method="post" style="max-width: 600px; margin: 0 auto;">
+            <form th:action="@{/login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
                 <div class="m-3">
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
@@ -31,9 +24,15 @@
                                    required minlength="1"/>
                         </div>
                     </div>
+
                     <div class="form-group row">
-                        <button>Sign in</button>
-                        <button>Sign up</button>
+                        <button type="button" class="btn btn-default">Sign in</button>
+                    </div>
+
+                    <div class="form-group row">
+                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup\''">
+                            Sign up
+                        </button>
                     </div>
                 </div>
             </form>
