--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,9 @@
                     </div>
 
                     <div class="form-group row">
-                        <button type="button" class="btn btn-default">Sign in</button>
+                        <button type="submit" class="btn btn-default" formmethod="post" autofocus>
+                            Sign in
+                        </button>
                     </div>
 
                     <div class="form-group row">
