--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,19 +10,19 @@
         <div class="container text-center">
             <h1 th:align="center">SIGN UP</h1>
 
-            <form th:object="${proxy}" method="post" style="max-width: 600px; margin: 0 auto;">
+            <form th:object="${proxy}" th:action="@{/signup}" method="post" style="max-width: 600px; margin: 0 auto;">
                 <div class="m-3">
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
                         <div class="col-8">
-                            <input type="email" class="form-control" required />
+                            <input type="email" class="form-control" th:field="*{username}" required />
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-4 col-form-label">Password: </label>
                         <div class="col-8">
-                            <input type="password" class="form-control"
+                            <input type="password" class="form-control" th:field="*{password}"
                                    required minlength="1"/>
                         </div>
                     </div>
@@ -30,13 +30,15 @@
                     <div class="form-group row">
                         <label class="col-4 col-form-label">Confirm password: </label>
                         <div class="col-8">
-                            <input type="password" class="form-control"
+                            <input type="password" class="form-control" th:field="*{confirmationPassword}"
                                    required minlength="1"/>
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <button type="button" class="btn btn-default">Sign up</button>
+                        <button type="submit" class="btn btn-default" formmethod="post" autofocus>
+                            Sign up
+                        </button>
                     </div>
                 </div>
             </form>
