Add password encoding

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <body>
-        <div class="bg-dark text-center text-white" th:fragment="footer">
+      xmlns:th="http://www.thymeleaf.org">
+    <footer th:fragment="footer">
+        <div class="bg-dark text-center text-white">
             <div class="container p-4">
                 <section class="mb-4">
-                    <a class="btn btn-outline-light btn-floating m-1" href="${github}" role="button">
-                        <i class="fab fa-github"></i>
+                    <a class="btn btn-outline-light btn-floating m-1" th:href="${github}" role="button">
+                        Email
                     </a>
 
-                    <a class="btn btn-outline-light btn-floating m-1" href="${email}" role="button">
-                        <i class="fab fa-gmail"></i>
+                    <a class="btn btn-outline-light btn-floating m-1" th:href="${email}" role="button">
+                        Github
                     </a>
                 </section>
             </div>
@@ -22,5 +20,5 @@
                 © 2022 ITransition Internship Task 4
             </div>
         </div>
-    </body>
+    </footer>
 </html>
