--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
         <div class="container text-center">
             <h1 th:align="center">LOG IN</h1>
 
-            <form th:action="@{/login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
+            <form th:action="@{/process_login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
                 <div class="m-3">
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
