--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,11 +6,11 @@
         <div class="bg-dark text-center text-white">
             <div class="container p-4">
                 <section class="mb-4">
-                    <a class="btn btn-outline-light btn-floating m-1" th:href="${github}" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" th:href="${email}">
                         Email
                     </a>
 
-                    <a class="btn btn-outline-light btn-floating m-1" th:href="${email}" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" th:href="${github}">
                         Github
                     </a>
                 </section>
