--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <head th:replace="fragments/header :: header"></head>
 
     <body>
-        <div class="container text-center">
+        <div class="container flex-lg-wrap text-center">
             <h1 th:align="center">LOG IN</h1>
 
             <form th:action="@{/process_login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
@@ -13,7 +13,7 @@
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
                         <div class="col-8">
-                            <input type="email" th:field="*{email}" class="form-control" required />
+                            <input type="email" th:field="*{username}" class="form-control" required />
                         </div>
                     </div>
 
@@ -25,6 +25,10 @@
                         </div>
                     </div>
 
+                    <div class="form-group row" th:if="${hasError}">
+                        <p th:text="${error}" style="text-underline-color: red"></p>
+                    </div>
+
                     <div class="form-group row">
                         <button type="submit" class="btn btn-default" formmethod="post" autofocus>
                             Sign in
@@ -32,7 +36,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup\''">
+                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup.html\''">
                             Sign up
                         </button>
                     </div>
