--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
         <div class="container flex-lg-wrap text-center">
             <h1 th:align="center">LOG IN</h1>
 
-            <form th:action="@{/process_login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
+            <form th:action="@{/login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
                 <div class="m-3">
                     <div class="form-group row">
                         <label class="col-4 col-form-label">E-mail: </label>
@@ -25,8 +25,11 @@
                         </div>
                     </div>
 
-                    <div class="form-group row" th:if="${hasError}">
-                        <p th:text="${error}" style="text-underline-color: red"></p>
+                    <div class="form-group row">
+                        <label class="col-4 col-form-label">Password: </label>
+                        <div class="col-8">
+                            <p th:text="${hasError} ? '' : ${error}"></p>
+                        </div>
                     </div>
 
                     <div class="form-group row">
@@ -36,7 +39,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup.html\''">
+                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup\''">
                             Sign up
                         </button>
                     </div>
