--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,33 +5,50 @@
     <head th:replace="fragments/header :: header"></head>
 
     <body>
+        <script>
+            function toggle(check) {
+                let checkboxes = document.getElementsByName('checked');
+                for (let checkbox in checkboxes) {
+                    checkbox.checked = check.checked;
+                }
+            }
+        </script>
+
         <div>
             <h1 th:align="center">USERS</h1>
         </div>
 
-        <div th:replace="fragments/buttons :: logout"></div>
-
         <div>
-            <table class="table table-striped table-bordered">
-                <thead class="thread-dark">
-                <tr>
-                    <th>ID</th>
-                    <th>Email</th>
-                    <th>Register date</th>
-                    <th>Last seen</th>
-                    <th>Status</th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.id}">--</td>
-                        <td th:text="${user.email}">--</td>
-                        <td th:text="${user.regDate}">--</td>
-                        <td th:text="${user.lastSeen}">--</td>
-                        <td th:text="${user.isOnline}">offline</td>
+            <form th:action="@{/users}" class="container" th:object="${checkedUsers}" method="post" th:name="users">
+                <div th:replace="fragments/buttons :: logout"></div>
+                <div th:replace="fragments/buttons :: block"></div>
+                <div th:replace="fragments/buttons :: unblock"></div>
+                <div th:replace="fragments/buttons :: delete"></div>
+                <table class="table table-striped table-bordered">
+                    <thead class="thread-dark">
+                    <tr>
+                        <th><input type="checkbox" name="selectAll" onclick="toggle(this)"/>Select/Unselect all</th>
+                        <th>ID</th>
+                        <th>Email</th>
+                        <th>Register date</th>
+                        <th>Last seen</th>
+                        <th>Status</th>
+                        <th>Blocked</th>
                     </tr>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        <tr th:each="user : ${users}">
+                            <td><input type="checkbox" th: name="checked"></td>
+                            <td th:text="${user.id}">--</td>
+                            <td th:text="${user.email}">--</td>
+                            <td th:text="${user.regDate}">--</td>
+                            <td th:text="${user.lastSeen}">--</td>
+                            <td th:text="${user.isOnline} ? 'online' : 'offline'">--</td>
+                            <td th:text="${user.blocked} ? 'Yes' : 'No'">--</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
         </div>
     </body>
 
