--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,6 +4,6 @@
         <title th:text="${title}">DEMO</title>
         <meta charset="UTF-8">
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-        <link th:rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     </head>
 </html>
