--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,39 +5,45 @@
     <head th:replace="fragments/header :: header"></head>
 
     <body>
-        <div class="container flex-lg-wrap text-center">
-            <h1 th:align="center">LOG IN</h1>
+        <section class="vh-100 bg-light">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                            <div class="card-body p-5 text-center">
 
-            <form th:action="@{/login}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
-                <div class="m-3">
-                    <div class="form-group row">
-                        <label class="col-4 col-form-label">E-mail: </label>
-                        <div class="col-8">
-                            <input type="email" th:field="*{username}" class="form-control" required />
+                                <div class="mb-md-5 mt-md-4 pb-5">
+
+                                    <h2 class="fw-bold mb-2 text-uppercase">LOG IN</h2>
+                                    <p class="text-white-50 mb-5">Please enter your email and password!</p>
+                                    <form th:action="@{/login}" th:object="${user}" method="post" style="max-width: 600px;">
+                                        <div class="form-outline form-white mb-4">
+                                            <input type="email" id="typeEmailX" th:field="*{username}"
+                                                   class="form-control form-control-lg" required />
+                                            <label class="form-label" for="typeEmailX">Email</label>
+                                        </div>
+
+                                        <div class="form-outline form-white mb-4">
+                                            <input type="password" id="typePasswordX" th:field="*{password}"
+                                                   class="form-control form-control-lg" required minlength="1"/>
+                                            <label class="form-label" for="typePasswordX">Password</label>
+                                        </div>
+
+                                        <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                                    </form>
+                                </div>
+
+                                <div>
+                                    <p class="mb-0">Don't have an account?
+                                        <a th:href="@{/signup}" class="text-white-50 fw-bold">Sign Up</a>
+                                    </p>
+                                </div>
+
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-4 col-form-label">Password: </label>
-                        <div class="col-8">
-                            <input type="password" th:field="*{password}" class="form-control"
-                                   required minlength="1"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <button type="submit" class="btn btn-default" formmethod="post" autofocus>
-                            Sign in
-                        </button>
-                    </div>
-
-                    <div class="form-group row">
-                        <button type="button" class="btn btn-default" th:onclick="'window.location.href=\'/signup\''">
-                            Sign up
-                        </button>
                     </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </section>
     </body>
 </html>
