--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,50 +5,47 @@
     <head th:replace="fragments/header :: header"></head>
 
     <body>
-        <script>
-            function toggle(check) {
-                let checkboxes = document.getElementsByName('checked');
-                for (let checkbox in checkboxes) {
-                    checkbox.checked = check.checked;
-                }
-            }
-        </script>
-
         <div>
-            <h1 th:align="center">USERS</h1>
+            <h1 th:align="center"><b>USERS</b></h1>
         </div>
 
         <div>
-            <form th:action="@{/users}" class="container" th:object="${checkedUsers}" method="post" th:name="users">
-                <div th:replace="fragments/buttons :: logout"></div>
-                <div th:replace="fragments/buttons :: block"></div>
-                <div th:replace="fragments/buttons :: unblock"></div>
-                <div th:replace="fragments/buttons :: delete"></div>
-                <table class="table table-striped table-bordered">
-                    <thead class="thread-dark">
+
+            <div th:replace="fragments/buttons :: logout"></div>
+            <table class="table table-striped table-bordered" id="table">
+                <thead class="thread-dark">
                     <tr>
-                        <th><input type="checkbox" name="selectAll" onclick="toggle(this)"/>Select/Unselect all</th>
                         <th>ID</th>
                         <th>Email</th>
                         <th>Register date</th>
                         <th>Last seen</th>
                         <th>Status</th>
                         <th>Blocked</th>
+                        <th>Actions</th>
                     </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="user : ${users}">
-                            <td><input type="checkbox" name="checked"></td>
-                            <td th:text="${user.id}">--</td>
-                            <td th:text="${user.email}">--</td>
-                            <td th:text="${user.regDate}">--</td>
-                            <td th:text="${user.lastSeen}">--</td>
-                            <td th:text="${user.isOnline} ? 'online' : 'offline'">--</td>
-                            <td th:text="${user.blocked} ? 'Yes' : 'No'">--</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form>
+                </thead>
+                <tbody>
+                    <tr th:each="user : ${users}" name="data-row">
+                        <td th:text="${user.id}">--</td>
+                        <td th:text="${user.email}">--</td>
+                        <td th:text="${user.regDate}">--</td>
+                        <td th:text="${user.lastSeen}">--</td>
+                        <td th:text="${user.isOnline} ? 'online' : 'offline'">--</td>
+                        <td th:text="${user.blocked} ? 'Yes' : 'No'">--</td>
+                        <td>
+                            <form method="POST" th:action="@{/users/block/{id}(id=${user.id})}">
+                                <button type="submit" name="submit" value="value" class="link-button">Block</button>
+                            </form>
+                            <form method="POST" th:action="@{/users/unblock/{id}(id=${user.id})}">
+                                <button type="submit" name="submit" value="value" class="link-button">Unblock</button>
+                            </form>
+                            <form method="POST" th:action="@{/users/delete/{id}(id=${user.id})}">
+                                <button type="submit" name="submit" value="value" class="link-button">Delete</button>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </body>
 
