Edit html templates

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,11 +7,11 @@
             <div class="container p-4">
                 <section class="mb-4">
                     <a class="btn btn-outline-light btn-floating m-1" th:href="${email}">
-                        Email
+                        <i class="fa fa-mail-forward"></i>
                     </a>
 
                     <a class="btn btn-outline-light btn-floating m-1" th:href="${github}">
-                        Github
+                        <i class="fa fa-github"></i>
                     </a>
                 </section>
             </div>
