--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-    <footer th:fragment="footer">
+    <footer class="mt-auto" th:fragment="footer">
         <div class="bg-dark text-center text-white">
             <div class="container p-4">
                 <section class="mb-4">
