--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/header :: header"></head>
 
-    <body>
+    <body class="d-flex flex-column min-vh-100">
         <div>
             <h1 th:align="center"><b>USERS</b></h1>
         </div>
